# Robustness_in_distributed_learning

./: .gitignore
Federated_Averaging_Manual/: fed_avg.py  fed_avg_data_and_model_poison.py  fed_avg_data_and_model_poison_prob.py  fed_avg_data_poison.py  fed_avg_data_poison_prob.py  fed_avg_model_poison.py  fed_avg_model_poison_prob.py  plot.py  plot_model_poisoning.py  plot_no_attack.py  poisoned_data_new.txt  poisoned_data_original.txt  prob_results.csv  results.csv  run_job_repeat.sh  run_model.sh  simulate.sh  task.py
Federated_Averaging_Manual/plot/: plot_bayesian_weighted_poison_prob.py  plot_data_poisoning.py  plot_dropout_mean_data_poison.py  plot_dropout_mean_poison_prob.py  plot_dropout_median_poison_prob.py  plot_mean_data_poison_prob.py  plot_mean_data_poisoning.py  plot_mean_model_poisoning.py  plot_mean_poison_prob.py  plot_median_data_poison.py  plot_median_model_poison.py  plot_median_poison_prob.py  plot_model_poisoning.py  plot_no_attack.py  plot_no_fed_avg.py  plot_softmax_mean_poison_prob.py  plot_threshold_exclude_mean_poison_prob.py  plot_threshold_exclude_median_poison_prob.py  plot_trimmed_mean_data_poison.py  plot_trimmed_mean_model_poison.py  plot_weighted_krum_poison_prob.py  plot_weighted_mean_data_poison.py  plot_weighted_mean_poison_prob.py
Federated_Averaging_Manual/results/: csv_combine.py  data_poison_results.csv  data_poison_results_10_clients.csv  (+52 more)
Flower_Example/: accuracy_file.txt  plot.py  simulate.sh
Flower_Example/fun/: README.md  pyproject.toml
Flower_Example/fun/fun/: __init__.py  client_app.py  server_app.py  task.py
(+3628 files in other folders)
